# HBM-Anlysis

./: .gitignore  CMakeLists.txt  README.md  memkind.txt
advancedhbm/: CMakeLists.txt
advancedhbm/include/: AnalysisTypes.h  BandwidthAnalyzer.h  BankConflictAnalyzer.h  ContentionAnalyzer.h  CrossFunctionAnalyzer.h  DataFlowAnalyzer.h  DependencyChainAnalyzer.h  DomUtils.h  FunctionAnalysisPass.h  FunctionBandwidthAnalyzer.h  FunctionBandwidthInfo.h  HBMMemoryManager.h  LoopAnalyzer.h  LoopUtils.h  MallocRecord.h  ModuleTransformPass.h  Options.h  ParallelismAnalyzer.h  PointerUtils.h  ProfileGuidedAnalyzer.h  StrideAnalyzer.h  TemporalLocalityAnalyzer.h  Utilities.h  VectorizationAnalyzer.h  WeightConfig.h
advancedhbm/src/: BandwidthAnalyzer.cpp  BankConflictAnalyzer.cpp  ContentionAnalyzer.cpp  CrossFunctionAnalyzer.cpp  DataFlowAnalyzer.cpp  DependencyChainAnalyzer.cpp  FunctionAnalysisPass.cpp  FunctionBandwidthAnalyzer.cpp  FunctionBandwidthInfo.cpp  HBMMemoryManager.cpp  HBMPlugin.cpp  LoopAnalyzer.cpp  LoopUtils.cpp  MallocRecord.cpp  ModuleTransformPass.cpp  Options.cpp  ParallelismAnalyzer.cpp  PointerUtils.cpp  StrideAnalyzer.cpp  TemporalLocalityAnalyzer.cpp  VectorizationAnalyzer.cpp  WeightConfig.cpp
doc/: ProfileGuidedAnalyzer.cpp  howtouse.md
example/: debug_verify  debug_verify.cpp  memcheck.sh  optimized.ll  program  report.json  report_functions_source.ll.json  report_functions_verify_free.ll.json  report_source.ll.json  run.sh  source.ll  test_hbm  test_hbm.c  test_hbm.cpp  test_program.bc  test_program.c  test_program.ll  test_program_analyzed.bc  verify_free  verify_free.c  verify_free.ll
hbm_runtime/: HBMMemoryManager.cpp  HBMMemoryManager.h
ioctl/: doc.md  makefile  my_probe_driver.c  my_probe_ioctl.h  my_probe_user.c
scripts/: Make.Linux  env.sh  setup_hbm_env.sh.in
test/: Makefile  main  main.cc  main.cpp  program  test_hbm_manager  test_hbm_manager.cpp
test/mini-hbm-demo/: CMakeLists.txt
test/mini-hbm-demo/src/: main.cpp  matmul.cpp  matmul.hpp
test/script/: run.sh
